nexus-collections/tests/ui/cannot_link_slot.stderr
error[E0308]: mismatched types
  --> tests/ui/cannot_link_slot.rs:16:20
   |
16 |     list.link_back(slot);
   |          --------- ^^^^ expected `DetachedListNode<u64, Storage>`, found `ListSlot<u64, Storage>`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected struct `DetachedListNode<u64, Storage>`
              found struct `nexus_collections::ListSlot<u64, Storage>`
note: method defined here
  --> src/list.rs
   |
   |     pub fn link_back(&mut self, node: DetachedListNode<T, A>) -> ListSlot<T, A> {
   |            ^^^^^^^^^
